<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.example</groupId>
    <artifactId>fx-fontfallbackdemo</artifactId>
    <version>1.0-SNAPSHOT</version>
    <name>fx-fontfallbackdemo</name>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <junit.version>5.10.0</junit.version>
        <java.version>21</java.version>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <javafx.version>21</javafx.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>${javafx.version}</version>
        </dependency>

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <proc>full</proc>
                    <parameters>true</parameters>
                    <compilerArgs>
                        <arg>--add-exports</arg>
                        <arg>javafx.graphics/javafx.scene.text=org.example.fxfontfallbackdemo</arg>
                        <arg>--add-exports</arg>
                        <arg>javafx.graphics/com.sun.javafx.scene.text=org.example.fxfontfallbackdemo</arg>
                        <arg>--add-exports</arg>
                        <arg>javafx.graphics/com.sun.javafx.font=org.example.fxfontfallbackdemo</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>0.0.8</version>
                <executions>
                    <execution>
                        <!-- Default configuration for running with: mvn clean javafx:run -->
                        <!-- Build image with mvn clean javafx:jlink -->
                        <id>default-cli</id>
                        <configuration>
                            <mainClass>org.example.fxfontfallbackdemo/org.example.fxfontfallbackdemo.DefaultApp</mainClass>
                            <launcher>app</launcher>
                            <jlinkZipName>app</jlinkZipName>
                            <jlinkImageName>app</jlinkImageName>
                            <noManPages>true</noManPages>
                            <stripDebug>true</stripDebug>
                            <noHeaderFiles>true</noHeaderFiles>
                            <options>
                                <option>--add-opens</option>
                                <option>javafx.graphics/javafx.scene.text=org.example.fxfontfallbackdemo</option>
                                <option>--add-opens</option>
                                <option>javafx.graphics/com.sun.javafx.font=org.example.fxfontfallbackdemo</option>
                                <option>--add-exports</option>
                                <option>javafx.graphics/javafx.scene.text=org.example.fxfontfallbackdemo</option>
                                <option>--add-exports</option>
                                <option>javafx.graphics/com.sun.javafx.font=org.example.fxfontfallbackdemo</option>
                                <option>-Dprism.lcdtext=false</option>
                                <option>-Dfile.encoding=UTF-8</option>
                                <option>-Dstdout.encoding=UTF-8</option>
                                <option>-Dsterror.encoding=UTF-8</option>
                            </options>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>